--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,12 @@ body {
     text-align: center;
 }
 
+#name-label,
+#email-label,
+#number-label {
+    width: 99%;
+}
+
 fieldset {
     border: none;
     padding: 2rem 0;
@@ -37,7 +43,7 @@ fieldset:last-of-type {
 
 label {
     display: block;
-    margin: 0.5rem 0;
+    margin: 0.5rem 0;z
 }
 
 input,
@@ -55,7 +61,7 @@ select {
 
 .inline {
     width: unset;
-    margin: 0 0.5em 0 0;
+    margin: -3px 0 0 0;
     vertical-align: middle;
 }
 
